fixed choosenItemCard horizontal animation bug (were different sizes of cards gap before animation, that depended on game result text)

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -2,7 +2,7 @@
   position: absolute;
   left: 0;
   right: 0;
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
